Fixed broken image link.

--- a/app/views/surveys/_fp.html.haml
+++ b/app/views/surveys/_fp.html.haml
@@ -4,7 +4,7 @@
 
 .bullets
   .illustration
-    = image_tag 'hot_jupiter.jpg', :title => 'A hot Jupiter planet near its parent star.', :width => 220, :height => 275
+    = image_tag 'hot_Jupiter.jpg', :title => 'A hot Jupiter planet near its parent star.', :width => 220, :height => 275
     %span.caption
       A hot Jupiter planet near its parent star. Courtesy David Aguilar (CfA) / TRACE / NASA.
   %dl
