--- a/app/views/surveys/_fc.html.haml
+++ b/app/views/surveys/_fc.html.haml
@@ -1,5 +1,5 @@
-- title "Frequency of Intelligent Civilization Communicating"
-%h3 Will an advanced civilization discover radio and choose to use it to communicate?
+- title Survey.title_for_parameter(:fc)
+%h3= Survey.question_for_parameter(:fc)
 
 %div.bullets
   .illustration
