--- a/app/views/surveys/_fi.html.haml
+++ b/app/views/surveys/_fi.html.haml
@@ -1,5 +1,5 @@
-- title "Frequency of Intelligence Evolving"
-%h3 If life starts on a planet, how likely is intelligence to develop?
+- title Survey.title_for_parameter(:fi)
+%h3= Survey.question_for_parameter(:fi)
 
 %div.bullets
   .illustration
