--- a/app/views/surveys/_fl.html.haml
+++ b/app/views/surveys/_fl.html.haml
@@ -1,5 +1,5 @@
-- title "Frequency of Life Developing"
-%h3 How hard is it for life to start on a suitable planet?
+- title Survey.title_for_parameter(:fl)
+%h3= Survey.question_for_parameter(:fl)
 
 %div.bullets
   .illustration
