--- a/app/views/surveys/_fp.html.haml
+++ b/app/views/surveys/_fp.html.haml
@@ -1,6 +1,6 @@
-- title 'Fraction of Stars that Develop Planets'
+- title Survey.title_for_parameter(:fp)
+%h3= Survey.question_for_parameter(:fp)
 
-%h3 How many suitable stars actually form a solar system with planets in it?
 
 .bullets
   .illustration
