--- a/app/views/surveys/_l.html.haml
+++ b/app/views/surveys/_l.html.haml
@@ -1,6 +1,5 @@
-- title "Life Expectancy of an Advanced Society"
-
-%h3 How many years can an advanced society survive?
+- title Survey.title_for_parameter(:l)
+%h3= Survey.question_for_parameter(:l)
 
 .bullets
   .illustration
