--- a/app/views/surveys/_ne.html.haml
+++ b/app/views/surveys/_ne.html.haml
@@ -1,5 +1,6 @@
-- title 'Number of Earthlike Planets'
-%h3 Average number of bodies in a solar system capable of supporting liquid water.
+- title Survey.title_for_parameter(:ne)
+%h3= Survey.question_for_parameter(:ne)
+
 
 %div.bullets
   .illustration
