--- a/app/views/surveys/_r_star.html.haml
+++ b/app/views/surveys/_r_star.html.haml
@@ -1,7 +1,5 @@
-
-- title "Rate of Stellar Formation"
-
-%h3 How many stars form in our galaxy each year?
+- title Survey.title_for_parameter(:r_star)
+%h3= Survey.question_for_parameter(:r_star)
 
 %div.bullets
   .illustration
