--- a/app/views/surveys/show.html.haml
+++ b/app/views/surveys/show.html.haml
@@ -1,7 +1,16 @@
-%pre
-  = h current_object.inspect
+- title "Your results: N = #{current_object.n}"
+%dl
+  %dt
+    = drake_number
+  %dd
+    == #{pluralize current_object.n, 'civlization'} currently exist in our galaxy
+  - Survey.parameter_columns.each do |parameter|
+    %dt
+      =parameter_to_drake_component parameter
+    %dd
+      = current_object.send("#{parameter}_rational").send("#{parameter}_label")
 
-  
+= link_to 'See your answers in context!', surveys_path
 %p
   Spread the word:
 %p.tweet-result
