--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -133,6 +133,7 @@ body
 
 @media all and (-webkit-min-device-pixel-ratio:0)
   +drake_sub_fix
+  +parameter_symbol_fix
 
 #footer
   margin: 30px 0
@@ -250,7 +251,6 @@ blockquote.signage
           text-decoration: none
         
     a[target~='_blank']:after
-      /content: ' (external link)'
       content: url(/images/external_link.png)
       color: #ccc
       font:
