--- a/app/views/surveys/show.html.haml
+++ b/app/views/surveys/show.html.haml
@@ -14,7 +14,7 @@
 %p
   Spread the word:
 %p.tweet-result
-  %a{:href => "http://www.twitter.com/home?status=I+found+#{current_object.n}+alien+civilzations+at+quest-for-life.org", :target => "_new"}
+  %a{:href => "http://www.twitter.com/home?status=I+found+#{current_object.n}+alien+civilzations+at+http://quest-for-life.org", :target => "_new"}
     = image_tag 'twitter_logo.png', :alt => '', :size => '80x18' 
     Post your result to your 
     %strong Twitter account
