formatting summary page FTW

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -537,3 +537,29 @@ ol.pie-charts
 table.data
   display: none
 
+ul.n-results
+  margin-top: 1em
+  li
+    +no-bullet
+    +clearfix
+    margin-bottom: .5em
+    dl
+      dt
+        float: left
+        font:
+          family: Georgia, 'Times New Roman', Serif
+          size: 150%
+          style: italic
+          weight: normal
+        line-height 4.0
+        text-align: center
+        width: 55px
+        text-shadow: 0 0 12px #000
+        background: rgba(0,0,0,.2)
+        padding: 0 .1em 0 .4em
+        +border_radius(.25em)
+        margin-right: 1em
+      dd
+        margin-left 150px
+  
+
