--- a/app/views/home/privacy.html.haml
+++ b/app/views/home/privacy.html.haml
@@ -1,7 +1,7 @@
 - title 'Privacy Policy'
 
 %h3 Short Version
-%p We won't sell any personal information or send  you any product information, ads, sales requests. Etc. We don't like spam and we know you don't like it either.
+%p We won't sell any personal information or send  you any product information, ads, sales requests, etc. We don't like spam and we know you don't like it either.
 
 %h3 Identifying Information
 %p You have the option to provide with a few pieces of personal information. None of this information is required to use the site, though you will get more out of the experience if you provide it. We collect the following pieces of information: city, state/province, country, age, gender, Twitter username.
