--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -1,9 +1,6 @@
 @import compass/utilities.sass
 @import partials/_mixins.sass  
   
-@font-face
-  font-family: 'Mank Sans'
-  src: url(/fonts/MankSans.ttf)
 
 body
   background:
@@ -94,7 +91,7 @@ body
         span.operator
           margin: 0 .25em
           font:
-            family: 'Arial Narrow', Helvetica, Sans-serif
+            family: 'Arial Narrow', 'Helvetica Neue', Helvetica, Sans-serif
             size: 20px
             style: normal
         
@@ -143,6 +140,7 @@ body
   color: #21254c
   .menu
     font-size: 120%
+    margin-bottom: .5em
   a
     color: #11152c
     text-decoration: none
@@ -247,7 +245,7 @@ blockquote.signage
     
   color: #fff
   +pie-clearfix
-  font-family: 'Mank Sans', Helvetica, 'Arial Narrow', Arial, Verdana, Georgia, 'Times New Roman', Serif
+  font-family: 'Helvetica Neue', Helvetica, 'Arial Narrow', Arial, Verdana, Georgia, 'Times New Roman', Serif
   position: relative
   +width_constraints
   margin: 0 auto 0 auto
@@ -271,6 +269,8 @@ blockquote.signage
       +clearfix
       margin: 0 0 1em 0
       font-size: 110%
+      font-weight: bold
+      width: 525px
 
     em
       font-style: italic
@@ -323,7 +323,9 @@ blockquote.signage
       width: 46%
       
     #teachers
-      margin-left: 55%
+      :float right
+      :width 300px
+      :margin-left 1em
     
       
     #form
@@ -342,7 +344,7 @@ blockquote.signage
       p
         color: #222
         text-shadow: 0 1px 1px #9c9
-        font-family: Helvetica, 'Mank Sans', sans-serif
+        font-family: 'Helvetica Neue', Helvetica, sans-serif
         font-size: 100%
         font-weight: bold
         
@@ -352,7 +354,7 @@ blockquote.signage
         :margin 1.25em 1em 0 0
         :color #222
         :text-shadow 0 1px 1px #9c9
-        :font-family Helvetica, 'Mank Sans', sans-serif
+        :font-family 'Helvetica Neue', Helvetica, sans-serif
         :font-weight bold
         
       fieldset
@@ -368,7 +370,7 @@ blockquote.signage
         :color #222
         :text-shadow 0 1px 1px #9c9
         :font-weight bold
-        :font-family Helvetica, 'Mank Sans', sans-serif
+        :font-family 'Helvetica Neue', Helvetica, sans-serif
       input[type=text], select
         :font-size 100%
         :border 2px solid #5c992e
@@ -379,7 +381,7 @@ blockquote.signage
     input[type=submit]
       margin-top: 1em
       font-size: 90%
-      font-family: Helvetica, 'Mank Sans', sans-serif
+      font-family: 'Helvetica Neue', Helvetica, sans-serif
       font-weight: bold
       padding: 4px 8px 2px 8px
       background: #5c992e url(/images/gradient-green-button.png) repeat-x
@@ -476,18 +478,21 @@ body.js dd.detail
   margin-top: 2.0em
   margin-left: 1em
   width: 220px
-  
+
   .caption
-    :font-size 10px
-    :font-family Arial, Helvetica, sans-serif
-    :display block
-    :line-height 1.1
-    :margin-top 3px
     :text-align right
-  
+
   img
     display: block
 
+.caption
+  :font-size 10px
+  :font-family Arial, 'Helvetica Neue', Helvetica, sans-serif
+  :display block
+  :line-height 1.1
+  :margin-top 3px
+  :text-shadow none
+  
 .bullets
   +clearfix
 
@@ -542,7 +547,7 @@ ol.pie-charts
   h4
     :font-size 90%
     :font-weight bold
-    :font-family Helvetica
+    :font-family Helvetica, sans-serif
     :padding-left 5px
   dl
     :float right
