--- a/app/views/home/privacy.html.haml
+++ b/app/views/home/privacy.html.haml
@@ -1,11 +1,11 @@
 - title 'Privacy Policy'
 
-%h3 Short Version
+%h4 Short Version
 %p We won't sell any personal information or send  you any product information, ads, sales requests, etc. We don't like spam and we know you don't like it either.
 
-%h3 Identifying Information
+%h4 Identifying Information
 %p You have the option to provide with a few pieces of personal information. None of this information is required to use the site, though you will get more out of the experience if you provide it. We collect the following pieces of information: city, state/province, country, age, gender, Twitter username.
 %p We also collect anonymous information about the pages you visit and the path you take through the site. This helps us improve the experience for everyone.
 
-%h3 Use of Information
-%p We use most of this information to learn how thoughts and attitudes on the search for life vary with different demographic groups. We use your Twitter username, if you provide it, to associate your Twitter avatar and username with your results.
+%h4 Use of Information
+%p We use most of this information to learn how thoughts and attitudes on the search for life vary between different demographic groups. We may use your Twitter username, if you provide it, to associate your Twitter avatar and username with your results.
