--- a/app/views/surveys/_ne.html.haml
+++ b/app/views/surveys/_ne.html.haml
@@ -21,7 +21,10 @@
       = main_point "Don't forget about moons"
     %dd.detail
       %p Since the Drake Equation was first proposed it has become clear that we need to look beyond planets. Jupiter's moon Europa and Saturn's moon Enceladus are both believed to have liquid oceans under a thick ice crust. The tidal pull of these moons' planets provides the energy to keep the water from freezing. This energy <em>could</em> support life.
-      = image_tag 'europa.gif', :title => "Cracks in Europa's icy crust. Image courtesy NASA, Voyager 2, 1979", :style => 'width: 350px;'
+      %p{ :style => 'width: 190px; text-align: right;' }
+        = image_tag 'europa.gif', :title => "Cracks in Europa's icy crust.", :style => 'display: block'
+        %span.caption
+          Cracks in Europa's icy crust. Image courtesy NASA, Voyager 2, 1979
     %dt.bullet
       = main_point "More Information"
     %dd.detail
