--- a/app/stylesheets/partials/_mixins.sass
+++ b/app/stylesheets/partials/_mixins.sass
@@ -46,7 +46,7 @@
   color = !font_color
   display: block
   font:
-    family: Helvetica, 'Mank Sans', sans-serif
+    family: 'Helvetica Neue', Helvetica, Arial, sans-serif
     size = !font_size
     weight: normal
   margin: 1em 0
@@ -56,7 +56,6 @@
     shadow: 0 1px 1px #E5E573
   width = !width
   &:hover
-    /background: #5c992e url(/images/gradient-green2.png) repeat-x 0 29px
     text-decoration: none
 
   a
@@ -67,10 +66,11 @@
       display: block
       margin-top: .25em
       text-align: right
-      color: #222
+      color: #111
       text-shadow: 0 1px 1px #9c9
       font-weight: bold
     &:hover
       text-decoration: none !important
       strong
         color: #000
+        text-shadow: 0 0 8px #fff
