--- a/app/views/home/about.html.haml
+++ b/app/views/home/about.html.haml
@@ -1,13 +1,36 @@
 - title 'About the Quest for Life'
 
 %h3 An Important Question
-%p "Are we alone?" This may be one of the most important questions of the 21st century. The answer, yes or no, should have profound impacts on the way we see our world and ourselves. If we are alone, then life is supremely scarce and we alone are capable of perceiving the wonders of the Universe, of asking questions and finding answers.
-%p On the other hand, if we are not alone the Milky Way becomes a different place. There are opportunities to share and learn that we have only imagined.
+%p 
+  "Are we alone?" This may be one of the most important questions of the 21st century. The answer, 
+  yes or no, would have profound impacts on the way we see our world and ourselves. If we are alone, 
+  then life is supremely scarce and we alone are capable of perceiving the wonders of the Universe, 
+  of asking questions and finding answers.
+%p 
+  On the other hand, if we are not alone the Milky Way becomes a different place. There are
+  opportunities to share and learn that we have only imagined.
 
 %h3 The Drake Equation
-%p If you have gone through this site, you know that many of the parameters are unknown. That is part of what makes it interesting to see your guesses compared with other peoples'. However, this uncertainty begs the question of the scientific validity, and usefulness, of the Drake Equation.
-%p The real value of the Drake Equation is not that it provides a specific answer -- too many of the parameters are unknown. The equation is a model that helps us understand what we need to know to answer the question, and what we need to know to find any life that may be out there. When the equation was first put forward in the 1960's essentially all of the parameters were unknown. Now we have a pretty good handle on the first two. Several missions, including the Mars Rovers and Kepler are working on N<sub>e</sub>. Research in geology and biology is gradually nibbling away at the other parameters. The Drake Equation provides a framework for moving us towards the answer.
+%p 
+  If you have gone through this site, you know that many of the parameters are unknown. That is part 
+  of what makes it interesting to see your guesses compared with other peoples'. However, this uncertainty 
+  begs the question of the scientific validity, and usefulness, of the Drake Equation.
+%p 
+  The real value of the Drake Equation is not that it provides a specific answer &mdash; too many of 
+  the parameters are unknown. The equation is a model that helps us understand what we need to know to 
+  answer the question, and what we need to know to find any life that may be out there. When the 
+  equation was first put forward in the 1960's essentially all of the parameters were unknown. Now we 
+  have a pretty good handle on the first two. Several missions, including the Mars Rovers and Kepler 
+  are working on N<sub>e</sub>. Research in geology and biology is gradually nibbling away at the other 
+  parameters. The Drake Equation provides a framework for moving us towards the answer.
 
-%h3 This Appplication
-%p This application really started as an interactive astronomy lecture developed by <a href="/home/credits">Steven Hammond</a> and presented in schools throughout Central Massachusetts. The original lecture featured the audience learning about the different parameters then coming to consensus on a value. By the end of the talk they had their own estimate on the number of intelligent civilizations in the galaxy.
-%p This website was built for a programming contest called <a href="http://r09.railsrumble.com">Rails Rumble</a>. Four guys built it over a period of 48-hours in August, of 2009. Hopefully it will serve as a proof of concept for other small, focused educational apps on a variety of topics.
+%h3 This Application
+%p 
+  This application really started as an interactive astronomy lecture developed by 
+  %a{ :href => '/home/credits' } Steven Hammond
+  and presented in schools throughout Central Massachusetts. The original lecture featured the audience learning about the different parameters then coming to consensus on a value. By the end of the talk they had their own estimate on the number of intelligent civilizations in the galaxy.
+%p 
+  This website was built for a programming contest called 
+  = succeed '.' do
+    %a{ :href => "http://r09.railsrumble.com" }Rails Rumble
+  Four guys built it over a period of 48 hours in August 2009. Hopefully it will serve as a proof of concept for other small, focused educational apps on a variety of topics.
