--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -47,10 +47,6 @@
             %p.iya
               %a{:href => 'http://astronomy2009.org/', :target => "_blank"}
                 The Universe: Yours to discover. International Year of Astronomy 2009
-            - rumble_text = 'Vote for this site for the Rails Rumble 2009 Competition'
-            %p.rumble
-              %a{:href => 'http://r09.railsrumble.com/teams/the-alienators', :target => "_blank", :title => rumble_text}
-                = rumble_text
                 
             %p.twitter
               %a{:href => 'http://www.twitter.com/home?status=See+how+many+alien+civilizations+you+can+find+at+quest-for-life.org', :target => "_blank"}
@@ -68,11 +64,11 @@
           = yield
     
       #footer
-        %p
-          = partial 'layouts/footer_menu'
+        = partial 'layouts/footer_menu'
         %p
           == Copyright &copy; #{Date.today.year}, 
           == #{link_to 'The Alienators', 'http://r09.railsrumble.com/teams/the-alienators'}.
 
     = render :partial => '/layouts/uservoice'
-    = render :partial => '/layouts/ga_tracking'
+    - if Rails.env.production?
+      = render :partial => '/layouts/ga_tracking'
