--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -49,7 +49,7 @@
                 The Universe: Yours to discover. International Year of Astronomy 2009
                 
             %p.twitter
-              %a{:href => 'http://www.twitter.com/home?status=See+how+many+alien+civilizations+you+can+find+at+quest-for-life.org', :target => "_blank"}
+              %a{:href => 'http://www.twitter.com/home?status=See+how+many+alien+civilizations+you+can+find+at+http://quest-for-life.org', :target => "_blank"}
                 = image_tag 'twitter_logo.png', :alt => '', :size => '80x18' 
                 Post to your Twitter account
 
