Capitalized Homo in Homo sapiens

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -7,11 +7,15 @@
 #participate
   %h2 Participate
   :textile
-    This site is your opportunity to understand the scientific underpinnings of the search for life in our galaxy. Explore our content for 10 minutes &mdash; or a few hours. As you think about each parameter of the equation you'll be building your own answer to the question "How many civilizations are out there trying to communicate with us?" Then see how your answers compare with other people from around the world.
+    This site is your opportunity to understand the scientific underpinnings of the search for life in our galaxy. 
+    
+    Explore our content for 10 minutes &mdash; or a few hours. As you think about each parameter of the equation you'll be building your own answer to the question "How many civilizations are out there trying to communicate with us?" Then see how your answers compare with other people from around the world.
       
 #teachers      
   %h2 Teachers
   :textile
-    Invite your students to think about this question and see their answers compared with the entire class. This can help drive class discussion over each individual parameters, the answers, and what those answers might mean to humanity.
+    Invite your students to think about this question and see their answers compared with the entire class.
+    
+    This can help drive class discussion over each individual parameters, the answers, and what those answers might mean to humanity.
   %p
     = link_to 'Teachers, get started now&hellip;', new_session_path
