--- a/app/views/surveys/_fi.html.haml
+++ b/app/views/surveys/_fi.html.haml
@@ -10,7 +10,7 @@
     %dt.bullet
       = main_point 'What do we mean by &ldquo;intelligence&rdquo;?'
     %dd.detail
-      %p This parameter encompasses a big leap in complexity from single celled organisms to all the way to complex organisms capable of culture and tool use. These two things dramatically increase a species' ability to adapt. When <i>homo sapiens</i> discovered clothing, we could teach our children to make clothing and now we could adapt to any climate without waiting to evolve a fur coat or a cooling mechanism. Similarly, stone tools enabled us to adapt our diets without waiting for claws or grinding teeth.
+      %p This parameter encompasses a big leap in complexity from single celled organisms to all the way to complex organisms capable of culture and tool use. These two things dramatically increase a species' ability to adapt. When <i>Homo sapiens</i> discovered clothing, we could teach our children to make clothing and now we could adapt to any climate without waiting to evolve a fur coat or a cooling mechanism. Similarly, stone tools enabled us to adapt our diets without waiting for claws or grinding teeth.
       %p In order for this rapid adaption to work a species must have both the ability to make the tool and the ability to teach others &mdash; especially the next generation. That is what makes technological growth possible.
     %dt.bullet
       = main_point 'Convergent evolution is the key'
