--- a/app/views/surveys/_l.html.haml
+++ b/app/views/surveys/_l.html.haml
@@ -15,7 +15,7 @@
       = main_point 'What is the end?'
     %dd.detail
       %p Great civilizations have collapsed many times in hour history. But for <em>human civilization</em> as a whole, these have only been setbacks. We may lose some culture or technology, but it always comes back and gets even more advanced in the next rise to power.
-      %p A similar setback in the future would not be the end of our ability to communicate. The end is really the extinction, or near extinction, of <i>homo sapiens</i> as a species &mdash; losses sufficient to halt the transmission of culture from one generation to the next. How long until that happens?
+      %p A similar setback in the future would not be the end of our ability to communicate. The end is really the extinction, or near extinction, of <i>Homo sapiens</i> as a species &mdash; losses sufficient to halt the transmission of culture from one generation to the next. How long until that happens?
     %dt.bullet
       = main_point 'More information'
     %dd.detail
