Fixed chart layout in safari

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -208,10 +208,11 @@ blockquote.signage
         
         .columns
           .column
-            :width 280px
+            :width 250px
             :float left
             &.legend
               :width 100px
+              :margin-left 20px
         
       ol.tabs
         :float left
@@ -536,7 +537,7 @@ ol.legend
     :height 12px
     
 ol.pie-charts
-  width: 247px
+  width: 240px
   +no-bullets
   li
     :background rgba(0,0,0,.4)
