--- a/app/views/surveys/new.html.haml
+++ b/app/views/surveys/new.html.haml
@@ -1,21 +1,9 @@
 - title 'The Drake Equation'
-/ %style{:type => 'text/css'}
-/   :sass
-/     select
-/       :display none
 
+%p
+  Let's get started!
 
 - semantic_form_for [parent_object, current_object].compact do |form|
       
-  / - form.inputs do
-  /   - for p in Survey.parameter_columns
-  /     = form.input p, :collection => RationalOption.all, :include_blank => false, :as => :select, :label_method => :quotient_label, :value_method => :quotient, :hint => 'a hint'
-
   - form.buttons do
     = form.commit_button 'Start the Drake Equation'
-/ 
-/ :javascript
-/   $(function(){
-/     $('select').each(function(i,o){
-/       $(o).selectToUISlider({labels: 0})});
-/   });
