Added CC license to haml files.

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,3 +1,10 @@
+-# 
+  Copyright (c) 2009 Steven Hammond, Cris Necochea, Joe Lind, Jeremy Weiskotten
+  
+  This work is licensed under the Creative Commons Attribution 3.0 United States License.
+  To view a copy of  this license, visit http://creativecommons.org/licenses/by/3.0/us/ or
+  send a letter to Creative Commons, 171 Second Street, Suite 300, San Francisco, California, 94105, USA.
+  
 - title 'Are We Alone?'
 
 %p In 1960 Dr. Frank Drake created a formula to estimate the number of intelligent civilizations in our galaxy. Rather than giving a definitive answer, the Drake Equation provides a framework for exploring what may be the most important scientific question of the 21st century.
