--- a/app/views/layouts/_uservoice.html.haml
+++ b/app/views/layouts/_uservoice.html.haml
@@ -1,3 +1,10 @@
+-# 
+  Copyright (c) 2009 Steven Hammond, Cris Necochea, Joe Lind, Jeremy Weiskotten
+  
+  This work is licensed under the Creative Commons Attribution 3.0 United States License.
+  To view a copy of  this license, visit http://creativecommons.org/licenses/by/3.0/us/ or
+  send a letter to Creative Commons, 171 Second Street, Suite 300, San Francisco, California, 94105, USA.
+  
 :javascript
   var uservoiceJsHost = ("https:" == document.location.protocol) ? "https://uservoice.com" : "http://cdn.uservoice.com";
   document.write(unescape("%3Cscript src='" + uservoiceJsHost + "/javascripts/widgets/tab.js' type='text/javascript'%3E%3C/script%3E"))
