--- a/app/views/layouts/_footer_menu.html.haml
+++ b/app/views/layouts/_footer_menu.html.haml
@@ -1,3 +1,10 @@
+-# 
+  Copyright (c) 2009 Steven Hammond, Cris Necochea, Joe Lind, Jeremy Weiskotten
+  
+  This work is licensed under the Creative Commons Attribution 3.0 United States License.
+  To view a copy of  this license, visit http://creativecommons.org/licenses/by/3.0/us/ or
+  send a letter to Creative Commons, 171 Second Street, Suite 300, San Francisco, California, 94105, USA.
+  
 %p.menu
   = link_to 'Home', root_path
   |
@@ -6,6 +13,8 @@
   = link_to 'Privacy', '/home/privacy'
   |
   = link_to 'Credits', '/home/credits'
+  |
+  = link_to 'Legal', '/home/legal'
   |
   = link_to 'IYA 2009', 'http://astronomy2009.org', :target => '_blank'
   |
