Some verbiage tweaks.

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -25,4 +25,4 @@
     
     This can help drive class discussion over each individual parameters, the answers, and what those answers might mean to humanity.
   %p
-    = link_to 'Teachers, get started now&hellip;', new_session_path
+    = link_to 'Teachers, login or register to use this in your classroom&hellip;', new_session_path
