--- a/app/views/shared/_survey_prompt.html.haml
+++ b/app/views/shared/_survey_prompt.html.haml
@@ -12,4 +12,4 @@
       How many intelligent civilizations do
       %em you
       think there are?
-      %strong Get started now.
+      %strong Begin your quest!
