Fixed color in footer and meuu

--- a/app/stylesheets/main.sass
+++ b/app/stylesheets/main.sass
@@ -137,12 +137,14 @@ body
   text-align: center
   font-size: 11px
   font-family: arial, sans-serif
-  color: #21254c
+  / color: #21254c
+  color: #ffffff
   .menu
     font-size: 120%
     margin-bottom: .5em
   a
-    color: #11152c
+    / color: #11152c
+    color: #ddd
     text-decoration: none
     &:hover
       text-decoration: underline
